Added notes abour Top Common Failures.

--- a/4.secEngInfraSecIAM.md
+++ b/4.secEngInfraSecIAM.md
@@ -238,3 +238,286 @@ runas /user:win10-ustudent\administrator cmd.exe
 * DC: delete child
 * RA: read attributes
 * WA: write attributes
+
+### Best practices between service to service communication
+
+* Any unencrypted communication presents risks
+* even inside perimeter, communications must be protected by encryption
+* take a look at industry and government compliance standards. They may required specific levels of encryption
+* consider encryption in every aspect of your security posture
+
+### encryption inside the perimeter
+
+#### data at rest
+
+* data is stored (db, file system)
+* servers, desktops, laptops, even mobiles
+
+#### data at transit
+
+* data transmitted
+
+#### data in use
+* encrypt data in memory
+* even though this type of data has a high payload, and encryption is difficult to achieve.
+
+#### email encryption
+
+* tls tunnels to other offices
+* IPSec inside the perimeter
+* VPN
+
+### IPSec or Internet Protocol Security
+
+* Encrypts TCP packets end to end
+* Encryption compatible ciphers: AES, 3DES, DES
+* Authentication algorithms: HMC-MD5, HMC-SHA1,2
+* Key exchange algorithms: IKE, DH KEA
+* It is applies for a host to host and network to network
+* It works at L3
+* It can be used both Windows either Linux based networks
+* Digital certificates can be implemented for authentication
+* IPSec performs mutual party authentication via cryptographic key exchanges
+
+#### IPSec protocols
+
+* authentication of header, integrity, and verification of packets
+* encapsulating security protocol (ESP)
+* encrypts packet IP Header & Payload
+* protocols involved in the encryption process and key exchange like internet key exchange protocol
+
+#### IPSec Comm Exchange Example
+
+1. P1 exchanges cryptography keys with P2
+2. At L3 level, or transport layer, verification of the exchange happens via packet headers and trailers, in which are the authentication information and packet verification
+3. Following identification and verification, authentication takes place
+4. Then, packet payload is encrypted
+   1. Depending on the IPSec mode it'll encrypted header and payload (tunnel) or only the payload (transport)
+5. Encrypted data is transmitted via L3 using UDP protocol
+6. Decryption occurs at the end of the process, when P2 is viewing data
+
+Considerations:
+
+* Performance issues my occur due to IPSec processing loads, which means IPSec is process intensive due to the constant encrypt and decrypt.
+* Things that are not sensible do not need to go through IPSec
+* Always take care of keys and certifications
+
+### Best Practices for Perimeter Encryption 
+
+* Do not use weak encryption standards
+* Mange and protect your encryption keys and digital certificates
+* Take care: encryption everything increases system load and decreases performance
+* Probably, high encryption environment may break legacy applications and services
+
+### Key and certificate management
+
+Always take care: implementing service to service communication encryption implies managing and protecting cryptographic keys and digital certificates either generated internally or purchased by a third party.
+
+#### Cryptographic keys
+* a string of data used to unlock cryptographic functions
+  * authentication
+  * authorization
+  * encryption
+* It is important know where they are, who has them, and when they need to be rotated
+* They must be protected and managed
+* If your keys are compromised, you must revoke your keys and reissue them.
+
+#### Digital certificates
+* as electronic document that proves ownership of a public cryptographic key
+* includes information about the key
+  * owner
+  * signature that verifies is authenticity
+* a certificate authority usually issues certificates
+* certificates are used to sign and authenticate encrypted communications
+
+#### Public key infrastructure
+
+* registration authority verifies requests for issuing a certificate to an entity
+* certificate store is database that stores digital certificates
+* certificate revocation list lists digital certificates that have been revoked and that serves as a reference
+* certificate authority issues the certificate and the validity
+  * create policies that dictates the role's duties of PKI infrastructure
+* entities issued certificates
+  * signed documents, smart card logons, SSL/TLS authentication, encryption of email communication
+
+#### Best Practices For Key Management 
+
+* Protect your encryption key management system, **including physically**
+* Access must be audited
+* Keys must be rotated
+* Create an air gap backup, which means somewhere **off-site and not** connected to the internet
+  * Then, encrypt where you store them
+* Create **recovery keys in case of system failure or compromise**
+* Manage issue and revocation
+  * revoking them early may become a burden and cost money
+  * work to find the proper length of time for a certificate
+* Be ready to replace or revoke them if needed
+* Self-signed is easy, but risk
+  * it is better than having no certificates at all, but eventually they will have to be replaced or managed correctly
+* Use a 3rd party because create a PKI may be too expensive
+* Store them separated from the key. This is a way to avoid a single point of failure
+
+### Credential Management
+
+CIS benchmarks
+
+* password length: 14 characters or more
+* password composition: at least 1 non-alphabetic character, a number and an uppercase character
+* password expiration: 1-year expiration
+* password banning: top 20 more common or bad passwords
+* session lock idle time: 15 minutes
+* monitor failed logins
+  * microsoft recommends lockout after 10 failed authentication events
+* suspend accounts not in use
+  * automatically suspend after 4 days of inactivity.
+* No password hints should be supplied
+
+#### Passwords, a Favorite Target for Malicious Actors
+
+* credential stuffing: credentials obtained from breaches are probed against multiple sites
+* phishing: emails, sms, cloned sites with malicious code capture passwords
+* keystroke logging: malware logs keystrokes can capture passwords
+* local discovery: passwords on stickers or spreadsheets with passwords
+* brute force: Using a dictionary of users and passwords to gain access via multiple tries
+
+#### Single Sign-On
+
+* All credentials have a life cycle and need to have an expiration or renewal date. 
+* Enforce long, complex password policies. 
+* Prevent embedding hard coding credentials in code or applications. 
+* Implement SSO & MFA if possible. 
+
+### Audit Password Policy
+
+Having password alone is a fragile form of authentication.
+Having policies in place does not mean they will be followed.
+You must enforce and audit it.
+The best approach is to apply multi-factor authentication (MFA)
+
+#### where passwords files stored?
+
+Windows:
+
+security account manager file: C:\Windows\System32\Config\SAM
+
+Linux Files:
+
+/etc/passwd -user account
+/etc/shadow  -password information
+/etc/group -user group information
+
+#### hashing a password
+
+A one-way transformation of a password into a string
+  * which means irreversible, at least in concept
+* NTLM Hashes
+  * AES Encryption AES-128-CBC. Advanced encryption standard with a 128-bit key
+  * Combination of AES\DES for hashing
+* SHA-512, linux hashing passwords
+
+#### Tools for Auditing Passwords 
+
+* Match hashes to passwords 
+* Use a Dictionary of known passwords 
+* Break weak cryptographic algorithms 
+
+* Windows
+  * Mimikatz  https://github.com/gentilkiwi/mimikatz
+  * L0pth Crack 
+  * Cain & Abel 
+  * John The Ripper https://www.openwall.com/john/
+* Linux
+  * John The Ripper 
+  * Hashcat https://hashcat.net/hashcat/
+
+#### Best Practices for Password Auditing 
+
+* establish a plan every 3 or 6 months
+* audit all accounts, including **service accounts**
+* check against well-known password leaked
+  * the biggest list is RockYou
+  * Create your own with a combination of all these files and make sure your passwords do not match them
+* Create a schema for account naming and creation
+* Specific nomenclature for Servers, Desktops & Mobiles
+* Specific nomenclature for Users vs. Administrators and Service Accounts or Special Groups
+* Have policies and mechanisms ready in case of a breach
+* Use GPOs to enforce password change
+* Have Cloud Platform Mechanisms in place to enforce password change
+* Have a plan to reset and reissue other credentials as well
+
+### Multi-factor authentication
+
+When is used more the one way of authentication, beyond usernames/passwords
+
+Three scopes
+* something you know
+  * passwords
+  * code, PIN
+  * word or phrase
+* something you have
+  * cellphone to receive a text after you enter your password
+  * usb key to insert after you authenticate
+  * application like Microsoft Authentication or Google Authentication
+* something you are
+  * eye's retina
+  * fingerprint
+  * face
+  * voice
+
+* All MFA activities need to be log and monitored
+* May need to remote wipe in some cases
+* Make sure you can revoke user's rights and access if an employee leaves the organization
+* Be ready to remove the device
+* Provide alternative methods
+* make it as user friendly as possible and compatible
+
+#### MFA Can Be Defeated
+
+* brute force
+* phishing
+* man in the middle
+* sim swap
+* endpoint or mobile compromise
+
+#### Best Practices In Multi-Factor Authentication 
+
+* Combine different authentication factors per use case 
+* Retina scan for security operation center access 
+* USB Key for changing account information at HR Portal 
+* Watch lockouts
+* Use apps like Microsoft Authenticator for email and cloud applications
+* Chose publicly available methods against proprietary
+* Hardware tokens increase support with potential loss or breakage
+* It is a mistake to base your MFA strategy on one single factor
+
+### Password Auditing Walkthrough
+
+* Linux
+  * sudo unshadow /etc/passwd /etc/shadow > password.txt
+    * This allowed us to see the passwords in this file in plain text
+  * john password.txt
+* Windows
+  * downloaded John The Ripper and Password Dump 7 for Windows
+  * Run Password dump in an Elevated Terminal
+    * runas /user:win10-student\administrator cmd.exe
+    * PwDump7.exe > passwords.txt
+    * .john.exe C:\Users\student\Desktop\pwdump\passwords.txt
+
+
+### Disconnect a user that was apparently caught accessing in an unauthorized manner
+
+* who
+* netstat
+* sudo netstat -tulpan |grep ESTABLISHED
+  * The above will give you only ESTABLISHED sessions via the network.
+* ps -aux|grep sshd
+* pgrep -u ustudent sshd
+* kill -9 PID
+
+### Futher Reading
+
+* https://en.wikipedia.org/wiki/Principle_of_least_privilege
+* https://docs.microsoft.com/en-us/windows/security/identity-protection/access-control/access-control
+* https://en.wikipedia.org/wiki/Separation_of_duties
+* http://permissions-calculator.org/
+* https://www.thegeekdiary.com/linux-file-directory-permissions-cheat-sheet/
